# AIAS_LAB25

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  memdump.txt
demo/: CMakeLists.txt  Memory.cc  Memory.hh  TrafficGenerator.cc  TrafficGenerator.hh  main.cc
emulator/: CMakeLists.txt  configs.json  emulator.cc
emulator/include/: BaseMemory.hh  CPU.hh  CPUEmulator.hh  DataMemory.hh  DataStruct.hh  Emulator.hh  EmulatorConfig.hh  EmulatorTop.hh  MemPacket.hh  System.hh  SystemConfig.hh  SystemTop.hh  linenoise.hpp
emulator/include/event/: MemReqEvent.hh  ProcessInstrEvent.hh
emulator/libs/: CMakeLists.txt  CPU.cc  CPUEmulator.cc  DataMemory.cc  Emulator.cc  MemPacket.cc  System.cc
emulator/libs/event/: MemReqEvent.cc  ProcessInstrEvent.cc
soc/: CMakeLists.txt  configs.json  main.cc
soc/asm/: hw3.txt
soc/include/: AXI4Bus.hh  CPU.hh  DMA.hh  DataMemory.hh  DataStruct.hh  Emulator.hh  MemPacket.hh  SOC.hh  SOCTop.hh  SystemConfig.hh
soc/include/event/: AXI4BusAcqEvent.hh  CPUCommEvent.hh  DMACommEvent.hh  DMAEndEvent.hh  DMAReqDoneEvent.hh  DMAStartEvent.hh  DMemCommEvent.hh  ExecOneInstrEvent.hh  MemReqDoneEvent.hh  MemRespEvent.hh
soc/libs/: AXI4Bus.cc  CMakeLists.txt  CPU.cc  DMA.cc  DataMemory.cc  Emulator.cc  MemPacket.cc  SOC.cc
soc/libs/event/: AXI4BusAcqEvent.cc  CPUCommEvent.cc  DMACommEvent.cc  DMAEndEvent.cc  DMAReqDoneEvent.cc  DMAStartEvent.cc  DMemCommEvent.cc  ExecOneInstrEvent.cc  MemRespEvent.cc
